<resources>
    <string name="app_name" translatable="false">RaspberryPI App</string>
    <string name="welcome_to_rpi_app">Welcome to RPI_APP</string>
    <string name="explain">This application is teleport visor door bell application.
                           Please for connection press 'Connect' Button! </string>
    <string name="connect">Start</string>
    <string name="exit">Exit</string>
    <string name="connection_label">Connection Label</string>
    <string name="ip">192.168.1.3</string>
    <string name="port">4141</string>
    <string name="press_to_connect">Press to connect!</string>
    <string name="connection">Connection</string>
    <string name="exit_connection_label">Exit to this connection label</string>
    <string name="connection_result_success">Connection Successfully</string>
    <string name="connection_result_fail">Connection Fail!!</string>
    <string name="todo">TODO</string>
    <string name="ok">OK</string>
    <string name="retry_to_connect">Retry to connect</string>
    <string name="server">server</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="back">Back</string>
    <string name="view">view</string>
    <string name="view_camera">View Camera</string>
    <string name="lock">Lock</string>
    <string name="unlock">unlock</string>
    <string name="connect_hit">Connect hit</string>
    <string name="exit_hit">Exit hit</string>
    <string name="back_hit">Back hit</string>
    <string name="unlock_hit">UNLOCK hit</string>
    <string name="lock_hit">LOCK hit</string>
    <string name="clicked_connect">You have clicked connect</string>


    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="setting_title">Server Setting</string>

</resources>
